--- a/style.css
+++ b/style.css
@@ -132,3 +132,21 @@ body {
   width: 0%;
   transition: width 0.1s linear;
 }
+
+/* MOBILE */
+@media (max-width: 700px) {
+  h1 {
+    font-size: 30px;
+  }
+  .img-container {
+    max-width: 35px;
+  }
+  .img-container img {
+    width: 60px;
+    height: 60px;
+    margin-left: 0px;
+  }
+  .navigation {
+    margin-left: 15px;
+  }
+}
